# 9P-Walkers

./: .clangd  .gitignore  .gitmodules  CONTEXT.md  PLAN.md  README.md  TODO.md  addition.md  task.md  答辩五人分工任务.md
Lab4/docs/: Task.md  report.md
Lab4/scripts/: 23_metrics.ps1  23_metrics.sh  24_tune.ps1  24_tune.sh  25_quality.ps1  25_quality.sh  26_build_rpc.ps1  26_build_rpc.sh  26_rpc_worker.ps1  26_rpc_worker.sh  27_rpc_compare.ps1  27_rpc_compare.sh  28_quant_compare.ps1  28_quant_compare.sh  README.md  common.ps1  common.sh  prompts.json  prompts_5.json  ray_dispatch.py  ray_dispatch.sh  ray_pressure.sh  ray_retry.sh  ray_start_servers.ps1  ray_start_servers.sh
docs/: architecture.md  build_and_flash.md  cluster-mesh-architecture.html  cluster_config_usage.md  mesh_envelope_spec.md  mesh_wifi_link.md  protocol_spec.md  refactor_architecture_plan.md  refactor_plan.md  refactor_progress_plan.md  slave_mesh_runtime.md  transport_abstraction.md  可行性分析.md  期末报告.md  答辩-C-主机数据面与会话层.md  调研报告.md
docs/FinalPre/: main.tex  答辩PPT文字材料.md  答辩问题预测与参考答案.md  项目简介.md
docs/MidtermPre/: main.tex
docs/adr/: 0001-mesh-envelope-for-control-plane.md  0002-master-owns-global-topology.md  0003-relay-bootstrap.md  0004-wifi-link.md
docs/overview/: architecture.md  host_network.md  mesh_envelope_spec.md  protocol_spec.md  slave_mesh_runtime.md  可行性分析.md
pwos-ESP32s3-LLMexp/ESP32S3-LLMEXP/: platformio.ini
pwos-master-esp32p4/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.bak  sdkconfig.defaults  sdkconfig.old
pwos-master-esp32p4/cluster/: cluster_config.c  cluster_config.h
pwos-master-esp32p4/coordinator_runtime/: pwos_coordinator_runtime.c  pwos_coordinator_runtime.h
pwos-master-esp32p4/host_api/: cluster_vfs.c  cluster_vfs.h  host_observability.c  host_observability.h
pwos-master-esp32p4/host_api/tests/: CMakeLists.txt  test_cluster_vfs.c
pwos-master-esp32p4/host_coordinator/: host_coordinator.c  host_coordinator.h
pwos-master-esp32p4/host_coordinator/tests/: CMakeLists.txt  test_host_coordinator.c
pwos-master-esp32p4/host_jobs/: job_command.c  job_command.h  (+2 more)
pwos-master-esp32p4/host_rpc/tests/: CMakeLists.txt  test_host_rpc_endpoint.c
pwos-master-esp32p4/host_sessions/tests/: CMakeLists.txt  test_session_manager.c
pwos-master-esp32p4/host_shell/tests/: CMakeLists.txt  test_command_service.c
pwos-master-esp32p4/main/: CMakeLists.txt  app_main.c  hello_world_main.c  idf_component.yml  lua_bindings.c  lua_bindings.h  lua_port.c  lua_port.h  lua_vfs_bindings.c  lua_vfs_bindings.h
pwos-master-esp32p4/main/web/: http_server.h  websocket_shell.c
pwos-master-esp32p4/vfs_bridge/test/: CMakeLists.txt  run.sh  test_main.c  test_mesh_host_runtime.c  test_mesh_host_service.c  test_mesh_transport_manager.c  test说明.md
pwos-master-esp32p4/vfs_bridge/test/build_asan/: CMakeCache.txt  Makefile  cluster_vfs_test  cmake_install.cmake  compile_commands.json  mesh_host_runtime_test  mesh_host_service_test
pwos-master-esp32s3/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
pwos-master-esp32s3/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
pwos-shared/: README.md  RUN_TIME_NODE_MESH.md
pwos-shared/csc/tests/: CMakeLists.txt  test_ccnet.c  test_rpc_smoke.c  test_scp_smoke.c
pwos-shared/host_rpc/tests/: CMakeLists.txt  test_host_rpc_protocol.c
pwos-shared/job/tests/: CMakeLists.txt  test_job_protocol.c
pwos-shared/link/tests/: CMakeLists.txt  test_pwos_link.c
pwos-shared/link/tests/golden/: link_frame_v2_basic.hex
pwos-shared/mesh2/tests/: CMakeLists.txt  test_pwos_mesh2_control.c
pwos-shared/rpc/tests/: CMakeLists.txt  test_rpc_protocol.c
pwos-slave/: .clangd  .gdbinit  .mxproject  CMakeLists.txt  CMakePresets.json  README.md  build.sh  pwos-slave.ioc
pwos-slave-stm32f407/: .clangd  .mxproject  CMakeLists.txt
pwos-slave-stm32f411/: .mxproject  CMakeLists.txt  README.md  build.sh  pwos-slave-stm32f411.ioc
pwos-slave-stm32f429/: .mxproject  CMakeLists.txt  DISPLAY.md  pwos-slave-stm32f429.ioc
pwos-slave-stm32f429/.omo/run-continuation/: ses_116baa50affeO18LRQbEkxd0XT.json
pwos-slave-stm32f429/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_it.h  usb_otg.h
pwos-slave-stm32f429/Core/Src/: dma.c  fmc.c  freertos.c  gpio.c  ltdc.c  main.c  stm32f4xx_it.c  usart.c  usb_otg.c
pwos-slave-stm32f429/User/app/: cube_demo.c  cube_demo.h  render_display.c  render_display.h
pwos-slave-stm32f429/User/backend/: README.md  local_vfs.c  local_vfs.h
pwos-slave-stm32f429/User/bsp/: bsp_lcd.c  bsp_lcd.h  bsp_sdram.c  bsp_sdram.h  display_sync.c  display_sync.h
pwos-slave-stm32f429/User/compute/: compute_worker.c  compute_worker.h
pwos-slave-stm32f429/User/diag/: fault_control.h
pwos-slave-stm32f429/User/drivers/: uart_dma_port.c  uart_dma_port.h
pwos-slave-stm32f429/User/drivers/storage/: lfs_port.hpp
pwos-slave-stm32f429/User/gfx/: gfx.c  gfx.h
pwos-slave-stm32f429/User/link/: port_manager.c  port_manager.h
pwos-slave-stm32f429/User/mesh2/: node_control.h
pwos-slave-stm32f429/User/os/: frame_pool.c
pwos-slave-stm32f429/User/rtos/: pwos_queues.h  pwos_tasks.h
pwos-slave-stm32f429/User/service/: job_service.h  rpc_service.h  service_runtime.c
pwos-slave-stm32f429/cmake/stm32cubemx/: CMakeLists.txt
pwos-slave/User/backend/test/: CMakeLists.txt  test_main.c
pwos-slave/User/backend/test/build_asan/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  local_vfs_test
pwos-slave/User/compute/tests/: CMakeLists.txt  test_compute_worker.c
pwos-slave/User/mini9p/test/: CMakeLists.txt  test_main.c
pwos-slave/User/service/tests/: CMakeLists.txt  test_job_service.c  test_rpc_service.c
pwos-slave/User/uart_transport/test/: CMakeLists.txt  TODO.md  test_slave_uart_transport_host.c
pwos-slave/User/uart_transport/test/stubs/: usart.h
tools/: mini9p_module_validation.c
tools/pc_master_emulator/: CMakeLists.txt  README.html  README.md  main.c  mesh_uart_transport_stub.c
tools/pc_master_emulator/build_asan/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  pc_master_emulator
(+374 files in other folders)
